...
                    }
                }
            }
        }

        AndroidView(
            modifier = Modifier.fillMaxWidth().testTag("dnsAdBanner"),
            factory = { adView },
        )
        DisposableEffect(adView) {
            adView.loadAd(AdRequest.Builder().build())
            onDispose { adView.destroy() }
        }
...
