...
fun ScreenList(showAds: Boolean = false, content: LazyListScope.() -> Unit) {
    val adsEnabled = showAds && LocalAdsEnabled.current
    LazyColumn(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background)
            .testTag("screenList"),
        contentPadding = PaddingValues(horizontal = 16.dp, vertical = 20.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
    ) {
        content()
        if (adsEnabled) item(key = "adBanner") { AdsComponent() }
    }
...
